# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-10-29 mmichaud <m.michael.michaud@orange.fr>
  * Fix editablePlugIn when AttributeTable or InfoFrame are opened

2016-10-26 mmichaud <m.michael.michaud@orange.fr>
  * GeometryFunctions : add Visvalingam-Whyatt simplifier

2016-10-26 mmichaud <m.michael.michaud@orange.fr>
  * SimpleQuery : spatial queries are now very fast (use of spatial indexes)

2016-10-25 mmichaud <m.michael.michaud@orange.fr>
  * Add ViewManager extension (v0.3.4) in OpenJUMP PLUS version

2016-10-23 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade graph extension to java1.7 and jgrapht0.9.2 (OpenJUMP PLUS)
  * Add SkeletonPlugIn to graph extension (OpenJUMP PLUS)

2016-10-16 ede
  * update ImageIO-Ext to 1.1.16
  * downgrade ImageIO-Ext TIFF plugin to 0.1.13 because of a persisting bug 
    from 0.1.14-0.1.16 described on jpp-devel
    https://sourceforge.net/p/jump-pilot/mailman/message/35425922/

2016-10-15 mmichaud <m.michael.michaud@orange.fr>
  * FR #237 : add an option in ViewOptionsPlugIn to synchronize/desynchronize
    selection in LayerView AttributePanel (synchronized by default)
  * Fix #436 : make invisible layers not editable.

2016-10-13 mmichaud <m.michael.michaud@orange.fr>
  * EditOptions are now persistent except rolling back invalid edits which is
    activated by default (in OpenJumpConfiguration)

2016-10-09 mmichaud <m.michael.michaud@orange.fr>
  * Refactoring of EditOptionsPanel + add single editable layer option

2016-10-08
  * Fix bug #433 throwing exception when applying scale limits in bad order
  * Optimization : changeStyle was applying the new style two times
  * Fix #432 Non-writable datasource (zipped, datastore...) :
    add prompt to detach the source in EditablePlugIn